// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeSwitch renders dark mode 1`] = `
<button
  aria-label="Toggle Dark Mode"
  class="btn btn-square btn-ghost btn-sm"
  role="switch"
  type="button"
>
  <svg
    aria-hidden="true"
    class="inline-block w-4 h-4 stroke-current md:w-6 md:h-6"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</button>
`;

exports[`ThemeSwitch renders light mode 1`] = `
<button
  aria-label="Toggle Dark Mode"
  class="btn btn-square btn-ghost btn-sm"
  role="switch"
  type="button"
>
  <svg
    aria-hidden="true"
    class="inline-block w-4 h-4 stroke-current md:w-6 md:h-6"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</button>
`;
